<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admin.myapplication.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#29e5d2"
        android:textSize="20dp"
        android:text="@string/text_plain1"
        android:id="@+id/textView" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rGroup">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/text_radio1"
            android:id="@+id/radioButton"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_radio2"
            android:id="@+id/radioButton2"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_radio3"
            android:id="@+id/radioButton3"/>
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:background="#29e5d2"
        android:text="@string/text_plain2"
        android:id="@+id/textView2"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cb1"
        android:id="@+id/checkBox"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cb2"
        android:id="@+id/checkBox2"/>
    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/text_bt"
        android:id="@+id/button"/>
</LinearLayout>